code/misc/service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cmpt756t3
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/customer
    rewrite:
      uri: /api/v1/customer
    route:
    - destination:
        host: t3customer
        port:
          number: 30000
  - match:
      - uri:
          prefix: /api/v1/warehouse
    rewrite:
      uri: /api/v1/warehouse
    route:
      - destination:
          host: t3warehouse
          port:
            number: 30001
  - match:
      - uri:
          prefix: /api/v1/cart
    rewrite:
      uri: /api/v1/cart
    route:
      - destination:
          host: t3cart
          port:
            number: 30003
  - match:
      - uri:
          prefix: /api/v1/returns
    rewrite:
      uri: /api/v1/returns
    route:
      - destination:
          host: t3returns
          port:
            number: 30006
  - match:
      - uri:
          prefix: /api/v1/history
    rewrite:
      uri: /api/v1/history
    route:
      - destination:
          host: t3history
          port:
            number: 30005
